Create beautiful UI for FindWords and a lot of different things